--- a/blogs/index.html
+++ b/blogs/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en-US">
 	<head>
 		<title>My Blogs</title>
 	</head>
@@ -10,7 +10,7 @@
 		<h5>Heading 5</h5>
 		<h6>Heading 6</h6>
 
-		<p>A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.</p>
+		<p>A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dog.A quick brown fox jumps over the lazy dogA quick brown fox jumps over the lazy dogA quick brown fox jumps over the lazy dogA quick brown fox jumps over the lazy dogA quick brown fox jumps over the lazy dogA quick brown fox jumps over the lazy dogA quick brown fox jumps over the lazy dogA quick brown fox jumps over the lazy dogA quick brown fox jumps over the lazy dogA quick brown fox jumps over the lazy dogA quick brown fox jumps over the lazy dogA quick brown fox jumps over the lazy dogA quick brown fox jumps over the lazy dogA quick brown fox jumps over the lazy dogA quick brown fox jumps over the lazy dogA quick brown fox jumps over the lazy dogA quick brown fox jumps over the lazy dogA quick brown fox jumps over the lazy dogA quick brown fox jumps over the lazy dogA quick brown fox jumps over the lazy dogA quick brown fox jumps over the lazy dogA quick brown fox jumps over the lazy dogA quick brown fox jumps over the lazy dogA quick brown fox jumps over the lazy dogA quick brown fox jumps over the lazy dogA quick brown fox jumps over the lazy dog</p>
 
 		<center>This text is in center place</center>
 
@@ -21,6 +21,41 @@
 		<center>
 			<strong>This text in strong/bold font</strong>
 		</center>
+
+		<font size="5" color="blue">This is an example of using font tag</font>
+
+		<p>
+			<font size="10" color="red">Hi Munmum,</font><br /><br/>
+
+			Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a <i><b>type specimen book</b></i>. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+		</p>
+
+		<img src="coffee.jpg" height="300" width="300" alt="munmun" />
+		<p><br/></p>
+
+		<table border="5" width="100%" bgcolor="sushree">
+			<tr bgcolor="orange">
+				<th><font color="white" size="5">Name</font></th>
+				<th><font color="white" size="5">Age</font></th>
+				<th><font color="white" size="5">Gender</font></th>
+				<th><font color="white" size="5">Address</font></th>
+			</tr>
+			<tr bgcolor="#eee">
+				<td>Sushree</td>
+				<td>20</td>
+				<td>Female</td>
+				<td>Angul</td>
+			</tr>
+			<tr bgcolor="#eee">
+				<td>Gajanan</td>
+				<td>20</td>
+				<td>Male</td>
+				<td>Kudopali</td>
+			</tr>
+		</table>
+
+		<p><br /><br/><br /><br/><br /><br/><br /><br/><br /><br/><br /><br/></p>
+
 
 	</body>
 </html>
